Add On the Road review
This was the review I wrote to pitch myself to The List to get the book reviewing job, and it worked!

--- a/annasbookcorner/relationship.htm
+++ b/annasbookcorner/relationship.htm
@@ -195,8 +195,12 @@ onClick="rand_link()" value="Pot Luck">
               by Tony White<font size="1"><br>
               </font></font><font size="1"><i><font color="#FF0000" size="2">***</font><font size="2">**</font></i><br>
               </font></div></td>
-          <td valign="top"  width="1" >&nbsp;</td>
-          <td valign="top" width="150">&nbsp;</td>
+          <td width="2" height="184" valign="top" bgcolor="#F0EDB9">&nbsp;</td>
+          <td valign="top" width="121"> <div align="center"><font face="Verdana, Arial, Helvetica, sans-serif" size="1"><a href="#ontheroad"><img src="/images/ontheroad.jpg" alt="Read review" width="85" height="128" border="0"><br>
+              <b>On the Road</b></a> <br>
+              by Jack Kerouac<font size="1"><br>
+              </font></font><font size="1"><i><font color="#FF0000" size="2">*</font><font size="2">****</font></i></font></div></td>
+          <td valign="top"  width="1" bgcolor="#F0EDB9">&nbsp;</td>
         </tr>
         <tr> 
           <td valign="top" bgcolor="#F0EDB9" colspan="9"><div align="center"><font face="Verdana, Arial, Helvetica, sans-serif" size="1" color="#333333"><a href="bestandworst.htm">Best 
@@ -563,7 +567,7 @@ onClick="rand_link()" value="Pot Luck">
       <font size="2" face="Arial, Helvetica, sans-serif">&nbsp;</font><img src="/images/foxy-t.jpg" alt="" width="79" height="128"><font size="2" face="Arial, Helvetica, sans-serif"><br>
       <strong>Foxy-T</strong><br>
       Tony White<br>
-      <em>Faber</em></font><br> <font color="#FF0000">***</font>** </td>
+      <em>Faber</em></font><br> <font color="#FF0000">***</font>**</td>
     <td rowspan="2" align="left" valign="top" bgcolor="#F0EDB9">&nbsp;</td>
     <td rowspan="2" align="left" valign="top"><font size="2" face="Arial, Helvetica, sans-serif">Foxy-T 
       and Ruji-Babes run the E-Z call internet and phone shop down Cannon Street 
@@ -586,6 +590,36 @@ onClick="rand_link()" value="Pot Luck">
     <td rowspan="2" align="left" valign="top">&nbsp;</td>
     <td height="248" align="left" valign="top" bgcolor="#F0EDB9"><p align="center"><font size="2" face="Arial, Helvetica, sans-serif">To 
         buy this book click here <A HREF="http://www.amazon.co.uk/exec/obidos/ASIN/0571216846/annasbookcorn-21">Foxy-T</A>
+</font></p>
+      <p align="center">&nbsp;</p>
+      </td>
+  </tr>
+  <tr> 
+    <td align="left" valign="top" ><font size="2" face="Arial, Helvetica, sans-serif"><a href="#top">To 
+      top</a></font></td>
+  </tr>
+  <tr> 
+    <td height="26" align="left" valign="top"><a name="ontheroad" id="ontheroad"></a></td>
+    <td align="left" valign="top">&nbsp;</td>
+    <td align="left" valign="top"><hr></td>
+    <td align="left" valign="top">&nbsp;</td>
+    <td align="left" valign="top">&nbsp;</td>
+  </tr>
+  <tr> 
+    <td height="26" rowspan="2" align="left" valign="top"><br>
+      <font size="2" face="Arial, Helvetica, sans-serif">&nbsp;</font><img src="/images/ontheroad.jpg" alt="" width="79" height="128"><font size="2" face="Arial, Helvetica, sans-serif"><br>
+      <strong>On the Road</strong><br>
+      Jack Kerouac<br>
+      <em>Penguin</em></font><br> <font color="#FF0000">*</font>****</td>
+    <td rowspan="2" align="left" valign="top" bgcolor="#F0EDB9">&nbsp;</td>
+    <td rowspan="2" align="left" valign="top"><font size="2" face="Arial, Helvetica, sans-serif">
+        You know that bloke in the pub, who tells you all about his trip to India where he met the most amazing people and took the most fascinating drugs? He is boring – so is <em>On the Road</em>. It is Kerouac's worship-like pursuit of Neal Cassidy: the "living epitome of beat", the "Angel", the "Saint", who tediously wanders around America marrying women, having kids by them, leaving them, letting all his friends down and talking rubbish. Kerouac spent seven years following Cassidy, then wrote the book in three weeks. "That's not writing, that's typing" said Truman Capote, and in fact Kerouac was convinced his artistic flow would be interrupted by changing the paper at the end of a page, so he taped together twelve-foot-long sheets to feed into his typewriter in order that not a second of his epic trip would be lost. Perhaps if he'd had access to a computer he'd have realised he had nothing to say.</font></p>
+      <p align="right"><font size="2" face="Arial, Helvetica, sans-serif">Review 
+        date: June 2001</font><br>
+      </p></td>
+    <td rowspan="2" align="left" valign="top">&nbsp;</td>
+    <td height="248" align="left" valign="top" bgcolor="#F0EDB9"><p align="center"><font size="2" face="Arial, Helvetica, sans-serif">Still want to buy it?
+        <A HREF="https://www.amazon.co.uk/Road-Penguin-Modern-Classics/dp/0141182679/">On the Road</A>
 </font></p>
       <p align="center">&nbsp;</p>
       </td>
