Add video from Continuous Lifecycle talk

--- a/cv.html
+++ b/cv.html
@@ -30,6 +30,11 @@ be read on <a href="/jfdi.html">my own blog</a>.
 <div>
 <h2>Speaking</h2>
 <h1><a
+href="https://youtu.be/EkfqgQXfEv8">After the launch: the difficult teenage years</a></h1>
+<date>15th May 2019</date>
+<p>How to create a technical strategy after launching a new product. Delivered at <a href="https://2019.continuouslifecycle.london/sessions/launch-difficult-teenage-years/">Continuous Lifecycle London</a>.</p>
+<p>Video and slides are in <a href="/jfdi/difficult-teenage-years.html">my write-up</a>.</p>
+<h1><a
 href="https://www.youtube.com/watch?v=M94Hg1mMGAg">How coding in the open can help you release faster</a></h1>
 <date>20th March 2018</date>
 <p>How coding in the open can help speed up all stages of the release cycle. Delivered at <a href="https://pipelineconf.info/">Pipeline conference</a>.</p>
