Add link to my comic
I had forgotten about this, from a few years ago so adding it here so I don't forget...

--- a/etc.html
+++ b/etc.html
@@ -33,7 +33,8 @@ flocking behaviour.<p>
 
 <h1>Other stuff</h1>
 <p>A website from my former incarnation, as one of <a href="https://www.list.co.uk/">The List</a>'s book reviewers:
-<a href="annasbookcorner/index.html" target="_blank">Anna's Book Corner</a>.
+<a href="annasbookcorner/index.html" target="_blank">Anna's Book Corner</a>.</p>
+<p>A <a href="https://annashipman.tumblr.com/">comic about Grace Hopper</a>, my coursework from the excellent drawing comics course at the <a href="https://www.royaldrawingschool.org/courses/public-courses/drawing-comics-and-graphic-novels/">Royal Drawing School</a>.</p>
 </div>
 
 {% include footer.html %}
