Add Tech Nottingham talk to CV page

--- a/cv.html
+++ b/cv.html
@@ -29,6 +29,9 @@ be read on <a href="/jfdi.html">my own blog</a>.
 <div class="right-column">
 <div>
 <h2>Speaking</h2>
+<h1><a href="https://www.technottingham.com/events/tech-nottingham-may-2020">The difficult teenage years at Tech Nottingham</a></h1>
+<date>11th May 2020</date>
+<p>A replay of my tech strategy talk, followed by a live Q&A, for a remote Tech Nottingham event. I've done a <a href="/jfdi/tech-nottingham.html">brief write-up</a>.</p>
 <h1><a
 href="https://youtu.be/EkfqgQXfEv8">After the launch: the difficult teenage years</a></h1>
 <date>15th May 2019</date>
