--- a/cv.html
+++ b/cv.html
@@ -29,6 +29,9 @@ be read on <a href="/jfdi.html">my own blog</a>.
 <div class="right-column">
 <div>
 <h2>Speaking</h2>
+<h1><a href="https://www.youtube.com/watch?v=gWXYVOjb-tA">Panel: The multiple faces of technical leadership</a></h1>
+<date>6th July 2020</date>
+<p>A panel about technical leadership, with the excellent Omosola Odetunde and Pat Kua. I've written some <a href="/jfdi/tech-leadership-panel.html">notes about what we covered</a>.</p>
 <h1><a href="https://www.technottingham.com/events/tech-nottingham-may-2020">The difficult teenage years at Tech Nottingham</a></h1>
 <date>11th May 2020</date>
 <p>A replay of my tech strategy talk, followed by a live Q&A, for a remote Tech Nottingham event. I've done a <a href="/jfdi/tech-nottingham.html">brief write-up</a>.</p>
