Add durable teams keynote to CV page

--- a/cv.html
+++ b/cv.html
@@ -29,6 +29,9 @@ be read on <a href="/jfdi.html">my own blog</a>.
 <div class="right-column">
 <div>
 <h2>Speaking</h2>
+<h1>How Durable Teams Take You Further, Faster</h1>
+<date>2nd December 2020</date>
+<p>I gave a keynote at <a href="https://conference.ctocraft.com/">CTO craft conference</a> about why and how we moved to durable teams, and what we've learned, one year on. <a href="/jfdi/durable-teams-keynote.html">Video and slides are in my write-up</a>.</p>
 <h1><a href="https://www.youtube.com/watch?v=gWXYVOjb-tA">Panel: The multiple faces of technical leadership</a></h1>
 <date>6th July 2020</date>
 <p>A panel about technical leadership, with the excellent Omosola Odetunde and Pat Kua. I've written some <a href="/jfdi/tech-leadership-panel.html">notes about what we covered</a>.</p>
