--- a/cv.html
+++ b/cv.html
@@ -29,6 +29,9 @@ be read on <a href="/jfdi.html">my own blog</a>.
 <div class="right-column">
 <div>
 <h2>Speaking</h2>
+<h1><a href="https://leaddev.com/technical-direction-strategy/creating-defining-and-refining-effective-tech-strategy">Creating, defining and refining an effective tech strategy</a></h1>
+<date>21st January 2021</date>
+<p>I faciliated a panel on tech strategy at <a href="https://leaddev.com/course/leaddev-live">LeadDev Live</a>. I've done a <a href="/jfdi/tech-strategy-panel.html">write up, with a link to the video</a>.</p>
 <h1><a href="https://vimeo.com/showcase/7882845/video/488034792">How Durable Teams Take You Further, Faster</a></h1>
 <date>2nd December 2020</date>
 <p>I gave a keynote at <a href="https://conference.ctocraft.com/">CTO craft conference</a> about why and how we moved to durable teams, and what we've learned, one year on. <a href="/jfdi/durable-teams-keynote.html">Video and slides are in my write-up</a>.</p>
