--- a/cv.html
+++ b/cv.html
@@ -29,7 +29,7 @@ be read on <a href="/jfdi.html">my own blog</a>.
 <div class="right-column">
 <div>
 <h2>Speaking</h2>
-<h1>How Durable Teams Take You Further, Faster</h1>
+<h1><a href="https://vimeo.com/showcase/7882845/video/488034792">How Durable Teams Take You Further, Faster</a></h1>
 <date>2nd December 2020</date>
 <p>I gave a keynote at <a href="https://conference.ctocraft.com/">CTO craft conference</a> about why and how we moved to durable teams, and what we've learned, one year on. <a href="/jfdi/durable-teams-keynote.html">Video and slides are in my write-up</a>.</p>
 <h1><a href="https://www.youtube.com/watch?v=gWXYVOjb-tA">Panel: The multiple faces of technical leadership</a></h1>
