Just realised I do not have a line about me

--- a/cv.html
+++ b/cv.html
@@ -3,6 +3,9 @@
 {% include header.html page_name=" : CV" %}
 
 <div class="left-column">
+
+<p>I am the Technical Director for Customer Products at the <a href="https://www.ft.com">Financial Times</a>. I like Vim, Devops, Vagrant, good commit messages and playing pool.</p>
+
 <h2>CV</h2>
 
 <p>My <a href="AnnaShipmanCV.pdf">CV</a> (as a PDF).</p>
