Reorganise - games is not the biggest thing now

--- a/etc.html
+++ b/etc.html
@@ -2,6 +2,9 @@
 ---
 {% include header.html page_name=" : Etc" %}
 <div class="right-column">
+<p>A website from my former incarnation, as one of <a href="https://www.list.co.uk/">The List</a>'s book reviewers:
+<a href="annasbookcorner/index.html" target="_blank">Anna's Book Corner</a>.</p>
+<p>A <a href="https://annashipman.tumblr.com/">comic about Grace Hopper</a>, my coursework from the excellent drawing comics course at the <a href="https://www.royaldrawingschool.org/courses/public-courses/drawing-comics-and-graphic-novels/">Royal Drawing School</a>.</p>
 <h1>Games</h1>
 <p>I like to write games in my spare time. Here are some of them.</p>
 
@@ -32,9 +35,7 @@ flocking behaviour.<p>
 <div class="left-column">
 
 <h1>Other stuff</h1>
-<p>A website from my former incarnation, as one of <a href="https://www.list.co.uk/">The List</a>'s book reviewers:
-<a href="annasbookcorner/index.html" target="_blank">Anna's Book Corner</a>.</p>
-<p>A <a href="https://annashipman.tumblr.com/">comic about Grace Hopper</a>, my coursework from the excellent drawing comics course at the <a href="https://www.royaldrawingschool.org/courses/public-courses/drawing-comics-and-graphic-novels/">Royal Drawing School</a>.</p>
+Some other things I do.
 </div>
 
 {% include footer.html %}
