Reorganise games bit for missing code & dead Flash

--- a/etc.html
+++ b/etc.html
@@ -12,30 +12,16 @@
 
 
 <h1>Games</h1>
-<p>I like to write games in my spare time. Here are some of them.</p>
-
-
+<p>Some games that I wrote, mostly unplayable...</p>
 <h3>Snake</h3>
 <p>My version of the Nokia phone game. Purely for experimental purposes. This is
-version 1.0 – playable, but not perfect; comments and suggestions are
-welcome.</p>
-<p>Java; <a href="https://github.com/annashipman/Snake">repo on GitHub</a>.</p>
-<h3>Bacteria Warfare!</h3>
-<p>Your job is to stop the bacteria going down the plughole and blocking the sink for as long as possible. Bacteria are (of course!) repelled if you are a different colour: CNTRL changes colour. Or you can lure them away by planting food of their own colour: SPACE.</p>
-<p><a href="games/bacteriaggj.html">Play it!</a> (requires Flash)</p>
-<p>ActionScript; <a href="https://github.com/annashipman/bacteria-warfare">repo on GitHub</a></p>
-<p>This game was created as part of the <a href="http://archive.globalgamejam.org/2010/bacterial-warfare" target="_blank">Global Game Jam 2010</a>.</p>
+version 1.0 – playable, but I had many more things to do, maybe someday I will... Java; <a href="https://github.com/annashipman/Snake">repo on GitHub</a>.</p>
 <h3>Tetris</h3>
-<p>This is WIP. I am exploring developing a game using TDD. It's completely unplayable at the moment but the tests all pass!</p>
-<p>Java; WIP on <a href="https://github.com/annashipman/Tetris">GitHub</a>.</p>
-<h3>A Serpent's Tale</h3>
-<p>Jump and catch the stars or just roll along and see the circle of life rolling along too.</p>
-<p>Unity, "JavaScript"; source files and instructions for game play can be found
-<a href="http://globalgamejam.org/2012/serpents-tale-0">here</a>.</p>
-<h3>For Flock's Sake</h3>
-<p>Your job is to herd the birds into the holding pen using their natural
-flocking behaviour.<p>
-<p>Python, PyOpenGL, PyGame; source <a href="http://globalgamejam.org/2011/flocks-sake">here</a>.</p>
+<p>Playing around with developing a game using TDD. Completely unplayable but the tests all pass! Java; <a href="https://github.com/annashipman/Tetris">repo on GitHub</a>.</p>
+<h3>Game Jam games</h3>
+<p>I took part in the <a href="https://globalgamejam.org/">Global Game Jam</a> in 2010, 2011 and 2012, in Glasgow.</p>
+<p>The first game I made was Bacteria Warfare! A good fun and playable game. Unfortunately this was in Flash so no longer playable, but the ActionScript code is <a href="https://github.com/annashipman/bacteria-warfare">on GitHub</a>.</p>
+<p>The two other games I made were A Serpent's Tale (Jump and catch the stars or just roll along and see the circle of life rolling along too.) in Unity; and For Flock's Sake (Your job is to herd the birds into the holding pen using their natural flocking behaviour) in Python, PyOpenGL, PyGame. The code for both were on the Game Jam archive server but this seems to have disapepared. Oh well!</p>
 </div>
 
 <div class="left-column">
