--- a/cv.html
+++ b/cv.html
@@ -32,6 +32,9 @@ be read on <a href="/jfdi.html">my own blog</a>.
 <div class="right-column">
 <div>
 <h2>Speaking</h2>
+<h1><a href="https://events.leaddev.com/2022-S3-articulating-strategy">The good, the bad and the tech strategy</a></h1>
+<date>15th February 2022</date>
+<p>I gave a talk about what strategy is, what good strategy looks like and what a good tech strategy is at <a href="https://events.leaddev.com/2022-S3-articulating-strategy">LeadDev Together</a>. Slides are in my <a href="/jfdi/good-bad-tech-strategy.html">write-up</a>.</p>
 <h1><a href="https://leaddev.com/technical-direction-strategy/creating-defining-and-refining-effective-tech-strategy">Creating, defining and refining an effective tech strategy</a></h1>
 <date>21st January 2021</date>
 <p>I faciliated a panel on tech strategy at <a href="https://leaddev.com/course/leaddev-live">LeadDev Live</a>. I've done a <a href="/jfdi/tech-strategy-panel.html">write up, with a link to the video</a>.</p>
