--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <div class="sidebar">
     <p>I am a technical director and software developer living and working in London.</p>
     <p>I am Technical Director for Customer Products at the <a href="https://www.ft.com/">Financial Times</a>, leading on the award-winning <a href="https://www.ft.com">FT.com</a> website and the FT iPhone and Android apps.</p>
-    <p>I <a href="jfdi.html">blog</a>, <a href="http://twitter.com/annashipman">tweet</a>, <a href="https://github.com/annashipman">code</a>, and play pool.</p>
+    <p>I write about tech, leadership and tech leadership on my <a href="jfdi.html">blog, JFDI.</a> I also <a href="http://twitter.com/annashipman">tweet</a>, occasionally <a href="https://github.com/annashipman">code</a>, and play pool.</p>
 <p>You can see a <a href="/bio.html">slightly longer bio</a> or have a look at my <a href="/cv.html">CV</a> for more.</p>
   </div>
 </div>
