Make bio consistent across pages

--- a/etc.html
+++ b/etc.html
@@ -21,13 +21,15 @@ version 1.0 – playable, but I had many more things to do, maybe someday I will
 <h3>Game Jam games</h3>
 <p>I took part in the <a href="https://globalgamejam.org/">Global Game Jam</a> in 2010, 2011 and 2012, in Glasgow.</p>
 <p>The first game I made was Bacteria Warfare! A good fun and playable game. Unfortunately this was in Flash so no longer playable, but the ActionScript code is <a href="https://github.com/annashipman/bacteria-warfare">on GitHub</a>.</p>
-<p>The two other games I made were A Serpent's Tale (Jump and catch the stars or just roll along and see the circle of life rolling along too) in JavaScript, Unity; and For Flock's Sake (Your job is to herd the birds into the holding pen using their natural flocking behaviour) in Python, PyOpenGL, PyGame. The code for both were on the Game Jam archive server but this seems to have disappeared. Oh well!</p>
+<p>The two other games I made were A Serpent's Tale (Jump and catch the stars or just roll along and see the circle of life rolling along too) in JavaScript, Unity; and For Flock's Sake (Your job is to herd the birds into the holding pen using their natural flocking behaviour) in Python, PyOpenGL, PyGame. The code for both were on the Game Jam archive server but this seems to have disappeared. Oh well.</p>
 </div>
 
 <div class="left-column">
 
-<h1>Other stuff</h1>
-Some other things I do.
+    <p>I am a technical director and software developer living and working in London.</p>
+    <p>I write about tech, leadership and tech leadership on my <a href="jfdi.html">blog, JFDI.</a> I also <a href="http://twitter.com/annashipman">tweet</a>, occasionally <a href="https://github.com/annashipman">code</a>, and play pool.</p>
+<p>You can see a <a href="/bio.html">slightly longer bio</a> or have a look at my <a href="/cv.html">CV</a> for more.</p>
+<p>This page is some of the other things I do or have done.</p>
 </div>
 
 {% include footer.html %}
