--- a/etc.html
+++ b/etc.html
@@ -25,7 +25,7 @@ version 1.0 – playable, but I had many more things to do, maybe someday I will
 </div>
 
 <div class="left-column">
-
+<h2>About me</h2>
     <p>I am a technical director and software developer living and working in London.</p>
     <p>I write about tech, leadership and tech leadership on my <a href="jfdi.html">blog, JFDI.</a> I also <a href="http://twitter.com/annashipman">tweet</a>, occasionally <a href="https://github.com/annashipman">code</a>, and play pool.</p>
 <p>You can see a <a href="/bio.html">slightly longer bio</a> or have a look at my <a href="/cv.html">CV</a> for more.</p>
