Add QConPlus talk to speaking page

--- a/speaking.html
+++ b/speaking.html
@@ -9,6 +9,9 @@
 <h1><a href="https://leaddev.com/technical-direction-strategy/difficult-teenage-years-setting-your-tech-strategy-after-launch">The difficult teenage years: setting your tech strategy after the launch</a></h1>
 <date>10th June 2022</date>
 <p>How to create a strategy, with examples from how we created the FT.com tech strategy after the launch, delivered at <a href="https://leaddev.com/technical-direction-strategy/difficult-teenage-years-setting-your-tech-strategy-after-launch">LeadingEng London</a>. Slides are in my <a href="/jfdi/difficult-teenage-years-leadeng.html">write-up</a>.</p>
+<h1><a href="https://plus.qconferences.com/plus2022/presentation/no-next-next-fighting-entropy-your-microservices-architecture">No Next Next: Fighting Entropy in Your Microservices Architecture</a></h1>
+<date>17th May 2022</date>
+<p>QConPlus is an online conference with the same talks as QCon. <a href="https://plus.qconferences.com/plus2022/presentation/no-next-next-fighting-entropy-your-microservices-architecture">How to avoid entropy in your microservices architecture.</a> Slides are in my <a href="/jfdi/fighting-entropy-qcon.html">QCon write-up</a>.</p>
 <h1><a href="https://qconlondon.com/london2022/presentation/no-next-next-fighting-entropy-microservices-architecture">No Next Next: Fighting Entropy in Your Microservices Architecture</a></h1>
 <date>6th April 2022</date>
 <p>How to avoid entropy in your microservices architecture, delivered at <a href="https://qconlondon.com/london2022/presentation/no-next-next-fighting-entropy-microservices-architecture">QCon London</a>. Slides are in my <a href="/jfdi/fighting-entropy-qcon.html">write-up</a>.</p>
