--- a/tags.html
+++ b/tags.html
@@ -14,7 +14,7 @@
 <h2>Tags</h2>
 
 {% for tag in site.tags %}
-  <h3>{{ tag[0] }}</h3>
+  <h3><a id="{{ tag[0]}}">{{ tag[0] }}</a></h3>
   <ul>
     {% for post in tag[1] %}
       <li><a href="{{ post.url }}">{{ post.title }}</a></li>
