First pass of tagging posts

--- a/_posts/2011-04-22-what-i-have-learned-about-folder-structure-today.html
+++ b/_posts/2011-04-22-what-i-have-learned-about-folder-structure-today.html
@@ -1,6 +1,7 @@
 ---
 anchor_id: learned-today
 title: What I have learned about folder structure today
+tag: Technology
 layout: blog_post
 ---
 <p><a href="http://packages.python.org/distribute/easy_install.html" target="_blank">Easy_install</a> (as it comes) doesn't work for Debian-based systems.</p>
