--- a/_posts/2011-07-20-upgrading-firefox-part-1.html
+++ b/_posts/2011-07-20-upgrading-firefox-part-1.html
@@ -1,6 +1,7 @@
 ---
 anchor_id: firefox-part-1
 title: Upgrading Firefox – part 1...
+tag: Technology
 layout: blog_post
 ---
 <p>So. Not content with the Ubuntu version of Firefox which is at 3.6.18, I decided that I wanted Firefox 5.0. Heck, I want 5.0.1.</p>
