--- a/_posts/2011-07-27-upgrading-firefox-part-2.html
+++ b/_posts/2011-07-27-upgrading-firefox-part-2.html
@@ -1,6 +1,7 @@
 ---
 anchor_id: firefox-part-2
 title: A Voyage of Discovery – Upgrading Firefox Part 2
+tag: Technology
 layout: blog_post
 ---
 <p>Right, it turned out my next step was not a chat with Joe Halliwell but
