--- a/_posts/2011-08-06-how-to-write-efficient-css-basic-css.html
+++ b/_posts/2011-08-06-how-to-write-efficient-css-basic-css.html
@@ -1,6 +1,7 @@
 ---
 anchor_id: basic-css
 title: How to Write Efficient CSS – Basic CSS
+tag: Technology
 layout: blog_post
 ---
 <p>I recently did a knowledge share at work on how to write efficient CSS, and one of my colleagues – a senior developer with a lot of experience – said "I felt the penny drop". High praise indeed, so I thought it was worth reproducing it here, even though other similar divs are available on the internet.</p>
