--- a/_posts/2011-08-29-how-to-write-efficient-css-evaluation-of-css.html
+++ b/_posts/2011-08-29-how-to-write-efficient-css-evaluation-of-css.html
@@ -1,6 +1,7 @@
 ---
 anchor_id: evaluation-of-css
 title: How to Write Efficient CSS – Evaluation of CSS
+tag: Technology
 layout: blog_post
 ---
 <p>I recently did a knowledge share at work on how to write efficient CSS, and one of my colleagues – a senior developer with a lot of experience – said "I felt the penny drop". High praise indeed, so I thought it was worth reproducing it here.</p>
