--- a/_posts/2011-09-12-sorl-thumbnail-comes-back-to-bite-me.html
+++ b/_posts/2011-09-12-sorl-thumbnail-comes-back-to-bite-me.html
@@ -1,6 +1,7 @@
 ---
 anchor_id: sorl-bites-me
 title: Sorl-thumbnail Comes Back to Bite Me
+tag: Technology
 layout: blog_post
 ---
 <p>Well, the <a href="#no-sorl-thumbnail">lack of sorl-thumbnail</a> came back to bite me when I got the latest version of the Django project I've been working on. Previous releases had lulled me into a false sense of security, but then the latest update, a bit too late in the evening, I had that old error:</p>
