--- a/_posts/2011-10-17-my-continuing-struggles-with-linux.html
+++ b/_posts/2011-10-17-my-continuing-struggles-with-linux.html
@@ -1,6 +1,7 @@
 ---
 anchor_id: continuing-struggles
 title: My Continuing Struggles with Linux
+tag: Technology
 layout: blog_post
 ---
 <p>Summarised excellently by this cartoon. It's great fun, but...</p>
