--- a/_posts/2011-11-30-javascript-visualisations-proposal.html
+++ b/_posts/2011-11-30-javascript-visualisations-proposal.html
@@ -1,6 +1,7 @@
 ---
 anchor_id: js-talk
 title: JavaScript Visualisations Proposal
+tag: Speaking
 layout: blog_post
 ---
 <p>I have proposed a talk for SPA2012 on JavaScript visualisations.</p>
