--- a/_posts/2011-12-18-preparation-begins-for-javascript-talk.html
+++ b/_posts/2011-12-18-preparation-begins-for-javascript-talk.html
@@ -1,6 +1,7 @@
 ---
 anchor_id: chat-with-ian
 title: Preparation Begins for the JavaScript Talk...
+tag: Speaking
 layout: blog_post
 ---
 <p>As part of preparing the proposal for the JavaScript visualisations talk, I had a coffee with <a href="https://twitter.com/ian_alderson" target="_blank">Ian Alderson</a>. He did an excellent talk at SPA2011, along with Adam Iley, on HTML5. The presentation is still available online (using HTML5 for the slides!) <a href="http://webappsthatshine.com/presentation/" target="_blank">here</a>, I really recommend you check it out.</p>
