--- a/_posts/2012-01-21-javascript-talk-takes-shape.html
+++ b/_posts/2012-01-21-javascript-talk-takes-shape.html
@@ -1,6 +1,7 @@
 ---
 anchor_id: jstalk-structure
 title: JavaScript Talk Takes Shape
+tag: Speaking
 layout: blog_post
 ---
 <p>Just over a week to go until the final deadline for the SPA submissions, and the JavaScript visualisations talk is shaping up.</p>
