--- a/_posts/2012-02-14-would-have-been-useful-to-know-at-my-first-game-jam.html
+++ b/_posts/2012-02-14-would-have-been-useful-to-know-at-my-first-game-jam.html
@@ -1,6 +1,7 @@
 ---
 anchor_id: gamejam-knowledge
 title: Would Have Been Useful to Know at My First Game Jam
+tag: Technology
 layout: blog_post
 ---
 <p>I had no idea what to expect at my first <a href="http://globalgamejam.org/" target="_blank">game jam</a>, and I was nervous about whether I'd be able to participate. I'm a programmer, but I'd never written a videogame, and I don't even much play videogames.</p>
