--- a/_posts/2012-04-15-what-should-your-work-log-tell-you.html
+++ b/_posts/2012-04-15-what-should-your-work-log-tell-you.html
@@ -1,6 +1,7 @@
 ---
 anchor_id: questions-for-data
 title: What Should Your Work Log Tell You?
+tag: Speaking
 layout: blog_post
 ---
 <p>We've got some great data for the <a href="http://www.spaconference.org/spa2012/" target="_blank">SPA2012</a> workshop on JavaScript visualisations. <a href="https://twitter.com/hibri" target="_blank">Hibri</a> has managed to obtained three years' worth of <a href="http://www.7digital.com/" target="_blank">7Digital</a>'s work-tracking data and <a href="https://twitter.com/robbowley" target="_blank">Rob</a> has very kindly allowed us to use it (anonymised, of course).</p>
