--- a/_posts/2012-04-29-the-cap-theorem-and-mongodb.html
+++ b/_posts/2012-04-29-the-cap-theorem-and-mongodb.html
@@ -1,6 +1,7 @@
 ---
 anchor_id: cap-theorem-and-mongodb
 title: The CAP Theorem and MongoDB
+tag: Technology
 layout: blog_post
 ---
 <p>This week I learned some things about MongoDB. One of them was about how it fits in with the CAP theorem.</p>
