--- a/_posts/2012-07-15-cap-again-or-pacelc.html
+++ b/_posts/2012-07-15-cap-again-or-pacelc.html
@@ -1,6 +1,7 @@
 ---
 anchor_id: cap-or-pacelc
 title: CAP again – or should that be PACELC?
+tag: Technology
 layout: blog_post
 ---
 <p>The last thing I wrote about was the CAP Theorem. Last week, <a href="https://twitter.com/thattommyhall" target="_blank">Tom Hall</a> visited our office and gave a very interesting talk, the central thesis of which was that the CAP Theorem, as often explained, is incorrect – or at least not very meaningful.</p>
