--- a/_posts/2012-07-19-learning-more-about-d3.html
+++ b/_posts/2012-07-19-learning-more-about-d3.html
@@ -1,6 +1,7 @@
 ---
 anchor_id: d3
 title: Learning More About D3
+tag: Technology
 layout: blog_post
 ---
 <p>I had a really inspiring chat with <a href="https://twitter.com/mattb" target="_blank">Matt Biddulph</a> about D3 this week. He showed me some really cool things. I made some notes.</p>
