--- a/_posts/2012-11-20-learning-the-perls.html
+++ b/_posts/2012-11-20-learning-the-perls.html
@@ -1,6 +1,7 @@
 ---
 anchor_id: learning-perl
 title: Learning the perls
+tag: Technology
 layout: blog_post
 ---
 <p>After some time muddling through with Perl, I have accepted the inevitable – it's time to actually knuckle down and learn it properly. I have acquired <a href="http://www.amazon.co.uk/Learning-Perl-Randal-L-Schwartz/dp/1449303587/" target="_blank">some</a> <a href="http://www.amazon.co.uk/Modern-Perl-chromatic/dp/0977920178/" target="_blank">books</a>, but I also require some direction – so I asked my excellent colleague and friend <a href="https://twitter.com/cackhanded" target="_blank">Mark Norman Francis</a> to write a brief guest post for my blog.</p>
