--- a/_posts/2013-03-24-roof-hacking.html
+++ b/_posts/2013-03-24-roof-hacking.html
@@ -1,6 +1,7 @@
 ---
 anchor_id: roof-hacking
 title: Roof Hacking
+tag: Technology
 layout: blog_post
 ---
 <p>Two weeks ago I was at the excellent <a href="http://devfort.com/" target="_blank">/dev/fort</a>. More on that another time; all I'll say now is that we were making a website in a <a href="http://www.landmarktrust.org.uk/search-and-book/properties/fort-clonque-7423" target="_blank">fort</a>.</p>
