--- a/_posts/2013-05-06-upgrading-to-12-04.html
+++ b/_posts/2013-05-06-upgrading-to-12-04.html
@@ -1,6 +1,7 @@
 ---
 anchor_id: upgrading
 title: Upgrading to 12.04...
+tag: Technology
 layout: blog_post
 ---
 <p>I needed to write some code. Thanks to <a href="http://georgebrock.com/images/thumbsup.gif" target="_blank">George Brocklehurst</a>, I was no longer content to do this on my personal laptop using gedit – I required Vim.</p>
