--- a/_posts/2013-08-10-some-regex-in-the-form-of-a-picture.html
+++ b/_posts/2013-08-10-some-regex-in-the-form-of-a-picture.html
@@ -1,6 +1,7 @@
 ---
 anchor_id: regex-picture
 title: Some Regex in the form of a Picture!
+tag: Technology
 layout: blog_post
 ---
 <img src="/img/regex.jpg" />
