--- a/_posts/2013-09-09-creating-a-puppet-module.html
+++ b/_posts/2013-09-09-creating-a-puppet-module.html
@@ -1,6 +1,7 @@
 ---
 anchor_id: puppet-module
 title: Creating a Puppet module
+tag: Technology
 layout: blog_post
 ---
 <p>I learnt three very interesting things recently, courtesy of the brilliant <a
