--- a/_posts/2014-06-04-using-git-to-refactor-vcloud-tools.html
+++ b/_posts/2014-06-04-using-git-to-refactor-vcloud-tools.html
@@ -1,6 +1,7 @@
 ---
 anchor_id: using-git-to-refactor
 title: Using Git to refactor vCloud Tools into separate gems
+tag: Technology
 layout: blog_post
 ---
 
