--- a/_posts/2014-12-19-how-we-moved-vcloud-tools-from-coding-in-the-open-to-open-source.html
+++ b/_posts/2014-12-19-how-we-moved-vcloud-tools-from-coding-in-the-open-to-open-source.html
@@ -1,6 +1,7 @@
 ---
 anchor_id: moving-to-os
 title: How we moved vCloud Tools from Coding in the Open to Open Source
+tags: ["Open source", Technology]
 layout: blog_post
 ---
 
