--- a/_posts/2014-05-07-building-tools-to-provision-our-machines.html
+++ b/_posts/2014-05-07-building-tools-to-provision-our-machines.html
@@ -1,6 +1,7 @@
 ---
 anchor_id: building-provisioning-tools
 title: Building tools to provision our machines
+tag: Technology
 layout: blog_post
 ---
 
