Now all my FT posts are authored by me

--- a/cv.html
+++ b/cv.html
@@ -33,7 +33,7 @@
 <p>My <a href="/jfdi.html">blog, JFDI</a>.</p>
 <p>I have written a chapter about DevOps at GDS for the book <a href="http://blog.buildqualityin.com/"> Build Quality In</a>.</p>
 <p>I wrote the sections on <a href="https://www.gov.uk/service-manual/technology/making-source-code-open-and-reusable">making source code open and reusable</a> and <a href="https://github.com/gds-attic/government-service-design-manual/blob/master/service-manual/agile/running-retrospectives.md">running retrospectives</a> in the <a href="https://www.gov.uk/service-manual">Government Service Design Manual</a>.</p>
-<p>I have written several posts on the FT Product & Technology blog (<a href="https://medium.com/@anna.shipman/about">some listed here</a> and <a href="https://medium.com/@anna.shipman">the others listed here</a>), the <a
+<p>I have written several posts on the <a href="https://medium.com/@anna.shipman">FT Product & Technology blog</a>, the <a
 href="https://gdstechnology.blog.gov.uk/author/annashipman/">GDS technology
 blog</a>, the <a href="https://gds.blog.gov.uk/author/anna-shipman/">GDS blog</a>
 and the <a href="https://governmentasaplatform.blog.gov.uk/author/annashipman/">Government as a Platform</a> blog. All those posts can also
