Another pass of tagging posts
This will do for now.

--- a/_posts/2012-02-20-plan-of-action.html
+++ b/_posts/2012-02-20-plan-of-action.html
@@ -1,6 +1,7 @@
 ---
 anchor_id: personal-development-1
-title: P.O.A.
+title: Plan of Action
+tag: Career development
 layout: blog_post
 ---
 <p>My goal is to be a better developer.</p>
