--- a/_posts/2013-01-21-how-to-estimate.html
+++ b/_posts/2013-01-21-how-to-estimate.html
@@ -1,6 +1,7 @@
 ---
 anchor_id: estimating
 title: How to Estimate
+tag: Technology
 layout: blog_post
 ---
 <p>I want to share this great idea about estimating that came from the excellent <a href="https://twitter.com/mnowster" target="_blank">Mazz Mosley</a>. Instead of worrying about estimating in hours or days, estimate in story points as follows:</p>
