--- a/_posts/2013-07-06-where-do-i-start.html
+++ b/_posts/2013-07-06-where-do-i-start.html
@@ -1,6 +1,7 @@
 ---
 anchor_id: where-start
 title: Where Do I Start?
+tag: "Career development"
 layout: blog_post
 ---
 <p>The first day at a new job is always a bit nerve-wracking. In a recent
