--- a/_posts/2014-03-09-conference-speaking.html
+++ b/_posts/2014-03-09-conference-speaking.html
@@ -1,6 +1,7 @@
 ---
 anchor_id: conference-speaking
 title: Are you thinking of speaking at a conference?
+tags: [Speaking, "Career development"]
 layout: blog_post
 ---
 
