List tags at the top of the page

--- a/tags.html
+++ b/tags.html
@@ -14,6 +14,10 @@
 <h2>Tags</h2>
 
 {% for tag in site.tags %}
+<a href="#{{tag[0]|slugize}}">{{tag[0]}}</a> /
+{% endfor %}
+
+{% for tag in site.tags %}
   <h3><a id="{{ tag[0]}}">{{ tag[0] }}</a></h3>
   <ul>
     {% for post in tag[1] %}
