Hadn't closed the h2!
This text was all bold...

--- a/speaking.html
+++ b/speaking.html
@@ -123,7 +123,7 @@ in 2009 at XPDay, one of the main pro-Agile conferences, and it was very popular
 
 </div>
 <div class="left-column">
-<h2>About me<h2>
+<h2>About me</h2>
     <p>I am a technical director and software developer living and working in London.</p>
     <p>I am Technical Director for Customer Products at the <a href="https://www.ft.com/">Financial Times</a>, leading on the award-winning <a href="https://www.ft.com">FT.com</a> website and the FT iPhone and Android apps.</p>
     <p>I write about tech, leadership and tech leadership on my <a href="jfdi.html">blog, JFDI.</a> I also <a href="http://twitter.com/annashipman">tweet</a>, occasionally <a href="https://github.com/annashipman">code</a>, and play pool.</p>
