--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 {% include header.html %}
 
 <div class="left-column">
+
   <div class="sidebar">
-    <p>I am a technical director and software developer living and working in London.</p>
-    <p>I am Technical Director for Customer Products at the <a href="https://www.ft.com/">Financial Times</a>, leading on the award-winning <a href="https://www.ft.com">FT.com</a> website and the FT iPhone and Android apps.</p>
-    <p>I write about tech, leadership and tech leadership on my <a href="jfdi.html">blog, JFDI.</a> I also <a href="http://twitter.com/annashipman">tweet</a>, occasionally <a href="https://github.com/annashipman">code</a>, and play pool.</p>
-<p>You can see a <a href="/bio.html">slightly longer bio</a> or have a look at my <a href="/cv.html">CV</a> for more.</p>
+    <p>Technical Director for Customer Products at the <a href="https://www.ft.com/">Financial Times</a>, leading on <a href="https://www.ft.com">FT.com</a>, the FT app and FT Edit.</p>
+    <p>I <a href="speaking.html">speak at conferences</a> and write about strategy and tech leadership on my <a href="jfdi.html">blog, JFDI</a>.</p>
+    <p><a href="https://www.linkedin.com/in/annashipman/">LinkedIn</a>, <a href="https://twitter.com/annashipman">Twitter</a>, <a href="https://github.com/annashipman">GitHub</a>.</p>
   </div>
 </div>
 
