Rename sidebar to posts list
Because that's what it is

--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@
 
 {% include header.html page_name=" : 404" %}
 <div class="left-column">
-    {% include sidebar.html %}
+    {% include posts_list.html %}
 </div>
 
 <div class="right-column">
