--- a/jfdi.html
+++ b/jfdi.html
@@ -4,7 +4,7 @@
 {% include header.html page_name=" : JFDI" %}
 
 <div class="left-column">
-    {% include sidebar.html %}
+    {% include posts_list.html %}
 </div>
 
 <div class="right-column">
